# ESISAR_CS211_TP2

./: CMakeLists.txt  Makefile  main.c
CR/: Compte_rendu.txt
Data/: test.txt  transporteur.txt
src/: bitmap.h  folder_fonction.c  folder_fonction.h  fonction_bitmap_decode.c  fonction_bitmap_decode.h  fonction_bitmap_steno.c  fonction_bitmap_steno.h  fonction_decode_question_I1.c  fonction_decode_question_I1.h  fonction_prep.c  fonction_prep.h  menu.c  menu.h  utility_fonction.c  utility_fonction.h
travail_preparatoire/: fonction_prep.c  fonction_prep.h
